WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152047
[EFL] Missing to set ignoreTLSError to NetworkProcess
https://bugs.webkit.org/show_bug.cgi?id=152047
Summary
[EFL] Missing to set ignoreTLSError to NetworkProcess
Gyuyoung Kim
Reported
2015-12-09 01:55:47 PST
Since NetworkProcess has been enabled by default, those 2 tests have been broken on EFL port.
Attachments
Patch
(1.84 KB, patch)
2015-12-09 02:22 PST
,
Gyuyoung Kim
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Gyuyoung Kim
Comment 1
2015-12-09 02:22:30 PST
Created
attachment 266980
[details]
Patch
Csaba Osztrogonác
Comment 2
2015-12-09 02:57:16 PST
Comment on
attachment 266980
[details]
Patch LGTM, r=me.
WebKit Commit Bot
Comment 3
2015-12-09 03:43:38 PST
Comment on
attachment 266980
[details]
Patch Clearing flags on attachment: 266980 Committed
r193822
: <
http://trac.webkit.org/changeset/193822
>
WebKit Commit Bot
Comment 4
2015-12-09 03:43:42 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug