[EFL] Missing to set ignoreTLSError to NetworkProcess https://bugs.webkit.org/show_bug.cgi?id=152047

Reviewed by Csaba Osztrogonác.

NetworkProcess has been enabled for all ports since r192796 though, EFL port
didn't send the ignoreTLSError value to NetworkProcess. This has caused failure of EFL API tests
related with ssl feature.

* UIProcess/efl/WebProcessPoolEfl.cpp:
(WebKit::WebProcessPool::setIgnoreTLSErrors):


Canonical link: https://commits.webkit.org/170197@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@193822 268f45cc-cd09-0410-ab3c-d52691b4dbfc